[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["root <jaredmoulton3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", features = ["tls"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }